# AndroidCameraVideoFocusLocked

./: README.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/daodaokami/lut/camera_video_c_lut/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: c_common_head.h  c_features_matcher.h  c_traingulation.h
app/src/main/java/com/daodaokami/lut/camera_video_c_lut/: Camera2VideoFragment.java  CameraActivity.java  VedioReadyEvent.java
app/src/main/java/com/daodaokami/lut/camera_video_c_lut/cex/: CExFuncLoader.java
app/src/main/java/com/daodaokami/lut/camera_video_c_lut/tools/: ConfirmationDialog.java  ErrorDialog.java  PicturePrcess.java
app/src/main/java/com/daodaokami/lut/camera_video_c_lut/ui/: AutoFitTextureView.java
app/src/main/res/layout/: activity_camera.xml  fragment_camera2_video.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/daodaokami/lut/camera_video_c_lut/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
